--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,8 +12,9 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_horizon"
+        src="https://ui5.sap.com/resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_fiori_3"
+        data-sap-ui-libs="sap.m, sap.ui.core, sap.tnt, sap.f"
         data-sap-ui-resourceroots='{
             "com.inv.sapfioriwebinversion": "./"
         }'
